adding robofriends to portfolio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2637,6 +2637,8 @@ input, select, textarea {
 
 			.image.fit img {
 				width: 100%;
+				margin-left: auto;
+				margin-right: auto;
 			}
 		
 			
